--- a/inicio.html
+++ b/inicio.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Cabo - Inicio</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Arcade - Architecture Template">
+	<meta name="description" content="Cabo - Portafolio">
 	<meta name="keywords" content="cabo, servicios, construccion, san miguel, pisos">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
@@ -54,7 +54,7 @@
 				<li><a href="contact.html">Contacto</a></li>
 				<li><a href="about.html">Sobre Nosotros</a></li>
 				<li><a href="service.html">Servicios</a></li>
-				<li><a href="portfolio.html">Portafolio</a></li>
+				<li><a href="portafolio.html">Portafolio</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -236,8 +236,6 @@
 		</div>
 	</section>
 	<!-- CTA section end -->
-
-
 	<!-- Milestones section Start -->
 	<section class="milestones-section spad">
 		<div class="container">
@@ -277,10 +275,10 @@
 				</div>
 				<div class="col-lg-9">
 					<ul class="projects-filter-nav">
-						<li class="btn-filter" data-filter="*">All</li>
-						<li class="btn-filter" data-filter=".rest">Restaurations</li>
-						<li class="btn-filter" data-filter=".build">Buildings</li>
-						<li class="btn-filter" data-filter=".apart">Apartments</li>
+						<li class="btn-filter" data-filter="*">Todos</li>
+						<li class="btn-filter" data-filter=".rest">Restauraciones</li>
+						<li class="btn-filter" data-filter=".build">Construcciones</li>
+						<li class="btn-filter" data-filter=".apart">Interior</li>
 					</ul>
 				</div>
 			</div>
@@ -371,7 +369,7 @@
 				
 			</div>
 		</div>
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-lg-9 offset-lg-3">
 					<div class="row">
@@ -411,7 +409,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
      <!-- <div class="copyright">Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved.  <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div> -->
