--- a/inicio.html
+++ b/inicio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Cabo - Inicio</title>
+	<title>Inicio - Cabo</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cabo - Portafolio">
 	<meta name="keywords" content="cabo, servicios, construccion, san miguel, pisos">
@@ -51,9 +51,9 @@
 		<nav class="nav-menu">
 			<ul>
 				<li class="active"><a href="inicio.html">Inicio</a></li>
-				<li><a href="contact.html">Contacto</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
 				<li><a href="about.html">Sobre Nosotros</a></li>
-				<li><a href="service.html">Servicios</a></li>
+				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="portafolio.html">Portafolio</a></li>
 			</ul>
 		</nav>
@@ -76,24 +76,7 @@
 			</div>
 		</div> -->
 		<!-- hero slider area -->
-		<!-- <div class="hero-slider">
-			<div class="hero-slide-item set-bg" data-setbg="img/bg.jpg">
-				<div class="slide-inner">
-					<div class="slide-content">
-					<h2>Minimalistic <br>Architecture <br> and more</h2>
-					<a href="#" class="site-btn sb-light">See Project</a>
-					</div>	
-				</div>
-			</div>	
-			<div class="hero-slide-item set-bg" data-setbg="img/bg.jpg">
-				<div class="slide-inner">
-					<div class="slide-content">
-					<h2>Minimalistic <br>Architecture <br> and more</h2>
-					<a href="#" class="site-btn sb-light">See Project</a>
-					</div>	
-				</div>
-			</div>	
-		</div> -->
+		
 		
 		<div class="hero-right-text">Multiservicios</div>
 	</section>
@@ -108,13 +91,23 @@
 					<h2 class="sp-title">Somos una empresa cuya <span style="background: #ADADAD ;">Misión </span>es brindar servicios<span>Integrales</span></h2>
 					<p> De ingeniería, construcción, remodelación y mantenimiento; contribuyendo así con el éxito de nuestros clientes brindando procesos de la más alta calidad.
 						Nuestro accionar privilegia la calidad, la seguridad y la preservación del medio ambiente; desarrollando con nuestros colaboradores las mejores prácticas de trabajo, ampliando nuestros conocimientos de manera continua, obteniendo un resultado competitivo para el beneficio de nuestros clientes.
-
 					</p>
-					<a href="portfolio.html" class="site-btn sb-dark">Ver proyectos</a>
 				</div>
-				<div class="col-lg-5 pt-4">
+				<div id="proyectos" class="owl-carousel col-lg-5 ">
+					<div class="item">
+						<img src="img/intro.jpg" alt="">
+					</div>
+					<div class="item">
+						<img src="img/portfolio/4.jpg" alt="">
+					</div>
+					<div class="item">
+						<img src="img/portfolio/3.jpg" alt="">
+					</div>
+				</div>
+				<a href="portafolio.html"  class="site-btn sb-dark">Ver proyectos</a>
+				<!-- <div class="col-lg-5 pt-4">
 					<img src="img/intro.jpg" alt="">
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
@@ -137,7 +130,7 @@
 						</div>
 						<h3>Elaboracion de planos</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
+						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
@@ -149,7 +142,7 @@
 						</div>
 						<h3>Cotizaciones</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
+						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
@@ -161,7 +154,7 @@
 						</div>
 						<h3>Mantenimientos y obras viales</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
+						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
@@ -173,7 +166,7 @@
 						</div>
 						<h3>Diseño en 3D</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
+						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
@@ -185,7 +178,7 @@
 						</div>
 						<h3>Estructuras Metalicas</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
+						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
@@ -197,7 +190,7 @@
 						</div>
 						<h3>Interiores</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
+						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
 			</div>
@@ -286,37 +279,40 @@
 		<div id="projects-carousel" class="projects-slider">
 			<div class="single-project set-bg rest" data-setbg="img/projects/1.jpg">
 				<div class="project-content">
-					<h2>Biggest <br> Restaurations</h2>
-					<p>Jan 19, 2018</p>
+					<h2>Gran <br> Restauracion</h2>
+					<p>Mayo 9, 2018</p>
 					<a href="#" class="seemore">See Project </a>
 				</div>
 			</div>
 			<div class="single-project set-bg build" data-setbg="img/projects/2.jpg">
 				<div class="project-content">
-					<h2>Office <br> Building</h2>
-					<p>Jan 19, 2018</p>
-					<a href="#" class="seemore">See Project </a>
+					<h2>Oficinas <br> construccion</h2>
+					<p>Julio 1, 2017</p>
+					<a href="#" class="seemore">Ver  Proyecto </a>
+
 				</div>
 			</div>
 			<div class="single-project set-bg apart" data-setbg="img/projects/3.jpg">
 				<div class="project-content">
-					<h2>Nice <br> Apartments</h2>
-					<p>Jan 19, 2018</p>
-					<a href="#" class="seemore">See Project </a>
+					<h2>Bonitos <br> Interiores</h2>
+					<p>Enero 19, 2018</p>
+					<a href="#" class="seemore">Ver  Proyecto </a>
+
 				</div>
 			</div>
 			<div class="single-project set-bg rest" data-setbg="img/projects/4.jpg">
 				<div class="project-content">
-					<h2>Biggest <br> Restaurations</h2>
-					<p>Jan 19, 2018</p>
-					<a href="#" class="seemore">See Project </a>
+					<h2>Grandes <br> Restauraciones</h2>
+					<p>Julio 19, 2019</p>
+					<a href="#" class="seemore">Ver  Proyecto </a>
+
 				</div>
 			</div>
 			<div class="single-project set-bg apart" data-setbg="img/projects/2.jpg">
 				<div class="project-content">
-					<h2>Office <br> Building</h2>
-					<p>Jan 19, 2018</p>
-					<a href="#" class="seemore">See Project </a>
+					<h2>Oficinas <br> Remodelacion</h2>
+					<p>Febrero 20, 2018</p>
+					<a href="#" class="seemore">Ver  Proyecto </a>
 				</div>
 			</div>
 		</div>
@@ -433,5 +429,7 @@
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/circle-progress.min.js"></script>
 	<script src="js/main.js"></script>
+	
+
 </body>
 </html>
