--- a/portafolio.html
+++ b/portafolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Cabo - Portafolio</title>
+		<title>Portafolio - Cabo</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="Cabo - Portafolio">
 		<meta name="keywords" content="cabo, servicios, construccion, san miguel, pisos, portafolio">
@@ -21,10 +21,6 @@
 		<link rel="stylesheet" href="css/style.css"/>
 	
 	
-		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
 	
 	</head>
 <body>
@@ -52,9 +48,9 @@
 		<nav class="nav-menu">
 			<ul>
 				<li><a href="inicio.html">Inicio</a></li>
-				<li><a href="contact.html">Contacto</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
 				<li><a href="about.html">Sobre Nosotros</a></li>
-				<li><a href="service.html">Servicios</a></li>
+				<li><a href="servicios.html">Servicios</a></li>
 				<li class="active"><a href="portafolio.html">Portafolio</a></li>
 			</ul>
 		</nav>
@@ -64,7 +60,7 @@
 
 
 	<!-- Page header section start -->
-	<section class="page-header-section set-bg" data-setbg="img/header-bg.jpg">
+	<section class="page-header-section set-bg" data-setbg="img/casamadera.jpg">
 		<div class="container">
 			<h1 class="header-title">Portafolio<span>.</span></h1>
 		</div>
@@ -101,7 +97,7 @@
 				<!-- portfolio item -->
 				<div class="grid-item set-bg grid-long  Construcciones" data-setbg="img/portfolio/6.jpg"><a class="img-popup" href="img/portfolio/6.jpg"></a></div>
 				<!-- portfolio item -->
-				<div class="grid-item set-bg Restauraciones Pantries Interior" data-setbg="img/portfolio/7.jpg"><a class="img-popup" href="img/portfolio/7.jpg"></a></div>
+				<!-- <div class="grid-item set-bg Restauraciones Pantries Interior" data-setbg="img/portfolio/7.jpg"><a class="img-popup" href="img/portfolio/7.jpg"></a></div> -->
 				
 			</div>
 		</div>
@@ -122,53 +118,12 @@
 				
 			</div>
 		</div>
-		<!-- <div class="container">
-			<div class="row">
-				<div class="col-lg-9 offset-lg-3">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="footer-item">
-								<ul>
-									<li><a href="#">Home</a></li>
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Portfolio</a></li>
-									<li><a href="#">Blog</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="footer-item">
-								<ul>
-									<li><a href="#">Terms & Conditions</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Help Desk</a></li>
-									<li><a href="#">Job Aplications</a></li>
-									<li><a href="#">Site Map</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="footer-item">
-								<ul>
-									<li><a href="#">Privacy</a></li>
-									<li><a href="#">Contact us</a></li>
-									<li><a href="#">Newsletter</a></li>
-									<li><a href="#">Clients Testimonials</a></li>
-									<li><a href="#">FAQ</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
-		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+		
 		<div class="copyright"> 
 			Copyright &copy;<script>document.write(new Date().getFullYear());</script> 
 			<a  href="https://www.facebook.com/INGENIEROCABO/" target="_blank">CABO Multiservicios</a>
 		</div>
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+   
 	</footer>
 	<!-- Footer section end -->
 
