--- a/servicios.html
+++ b/servicios.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Arcade - Architecture</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Arcade - Architecture Template">
-	<meta name="keywords" content="arcade, architecture, onepage, creative, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
-
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
+	<head>
+		<title>Servicios - Cabo</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Cabo - Servcios">
+		<meta name="keywords" content="cabo, servicios, construccion, san miguel, pisos, portafolio, construir, el salvador">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Favicon -->   
+		<link href="img/cabito.ico" rel="shortcut icon"/>
+	
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+	
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="css/font-awesome.min.css"/>
+		<link rel="stylesheet" href="css/animate.css"/>
+		<link rel="stylesheet" href="css/owl.carousel.css"/>
+		<link rel="stylesheet" href="css/magnific-popup.css"/>
+		<link rel="stylesheet" href="css/style.css"/>
+	
+	
+	
+	</head>
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -40,24 +37,31 @@
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
-		<div class="phone-number">+675 334 567 223</div>
+		<div class="contactdiv">
+			<div class="phone-number"><a href="tel:+503 7323 9029" style="text-decoration: none; color:black" >+503 7323 9029</a></div>
+			<div>
+					<a href="https://www.instagram.com/cabo_multiservicios_es/"><i class="fa fa-instagram"></i></a>
+					<a href="https://www.facebook.com/INGENIEROCABO/"><i class="fa fa-facebook"></i></a>
+			</div>
+		</div>
+		
 		<nav class="nav-menu">
 			<ul>
-				<li><a href="home.html">Home</a></li>
-				<li><a href="about.html">About us</a></li>
-				<li class="active"><a href="service.html">Services</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="inicio.html">Inicio</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="about.html">Sobre Nosotros</a></li>
+				<li  class="active"><a href="servicios.html">Servicios</a></li>
+				<li><a href="portafolio.html">Portafolio</a></li>
 			</ul>
 		</nav>
 	</header>
-	<!-- Header section end -->   
+	<!-- Header section end -->  
 
 
 	<!-- Page header section start -->
-	<section class="page-header-section set-bg" data-setbg="img/header-bg.jpg">
+	<section class="page-header-section set-bg" data-setbg="img/oficina.jpg">
 		<div class="container">
-			<h1 class="header-title">Services<span>.</span></h1>
+			<h1 class="header-title" >Servicios<span>.</span></h1>
 		</div>
 	</section>
 	<!-- Page header section end -->
@@ -131,89 +135,90 @@
 	<!-- Service box section end -->
 
 
-	<!-- Service section start -->
-	<section class="service-section spad">
-		<div class="container">
-			<div class="section-title">
-				<h1>Services</h1>
+<!-- Service section start -->
+<section class="service-section spad">
+	<div class="container">
+		<div class="section-title">
+			<h2>Servicios</h2>
+		</div>
+		<div class="row">
+			<div class="col-lg-4 col-md-6">
+				<div class="service-box">
+					<div class="sb-icon">
+						<div class="sb-img-icon">
+							<img src="img/icon/dark/1.png" alt="">
+						</div>
+					</div>
+					<h3>Elaboracion de planos</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<a href="#" class="readmore">Ver más</a>
+				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/1.png" alt="">
-							</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="service-box">
+					<div class="sb-icon">
+						<div class="sb-img-icon">
+							<img src="img/icon/dark/2.png" alt="">
 						</div>
-						<h3>Plans and Projects</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
 					</div>
+					<h3>Cotizaciones</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<a href="#" class="readmore">Ver más</a>
 				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/2.png" alt="">
-							</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="service-box">
+					<div class="sb-icon">
+						<div class="sb-img-icon">
+							<img src="img/icon/dark/3.png" alt="">
 						</div>
-						<h3>Conceptual Architecture</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
 					</div>
+					<h3>Mantenimientos y obras viales</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<a href="#" class="readmore">Ver más</a>
 				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/3.png" alt="">
-							</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="service-box">
+					<div class="sb-icon">
+						<div class="sb-img-icon">
+							<img src="img/icon/dark/4.png" alt="">
 						</div>
-						<h3>Apartment Buildings</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
 					</div>
+					<h3>Diseño en 3D</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<a href="#" class="readmore">Ver más</a>
 				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/4.png" alt="">
-							</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="service-box">
+					<div class="sb-icon">
+						<div class="sb-img-icon">
+							<img src="img/icon/dark/5.png" alt="">
 						</div>
-						<h3>Skyscrapers Buildings</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
 					</div>
+					<h3>Estructuras Metalicas</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<a href="#" class="readmore">Ver más</a>
 				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/5.png" alt="">
-							</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="service-box">
+					<div class="sb-icon">
+						<div class="sb-img-icon">
+							<img src="img/icon/dark/6.png" alt="">
 						</div>
-						<h3>Documentation</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
 					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
-								<img src="img/icon/dark/6.png" alt="">
-							</div>
-						</div>
-						<h3>Restauration Projects</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">READ MORE</a>
-					</div>
+					<h3>Interiores</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<a href="#" class="readmore">Ver más</a>
 				</div>
 			</div>
 		</div>
-	</section>
-	<!-- Service section end -->
+	</div>
+</section>
+<!-- Service section end -->
+ 
 
 
 
@@ -222,11 +227,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-9 promo-text">
-						<h1>In need of a <span>fabulouse</span> home?</h1>
+						<h1>En busca de un <span>fabuloso</span> hogar?</h1>
 						<p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus.</p>
 					</div>
 					<div class="col-lg-3 text-lg-right">
-						<a href="#" class="site-btn sb-light mt-4">Get in Touch</a>
+						<a href="contacto.html" class="site-btn sb-light mt-4">Contactanos</a>
 					</div>
 				</div>
 			</div>
@@ -236,18 +241,16 @@
 
 
 
-	<!-- Footer section start -->
 	<footer class="footer-section">
 		<div class="footer-social">
 			<div class="social-links">
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-linkedin"></i></a>
-				<a href="#"><i class="fa fa-instagram"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
+				
+				<a href="https://www.instagram.com/cabo_multiservicios_es/"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.facebook.com/INGENIEROCABO/"><i class="fa fa-facebook"></i></a>
+				
 			</div>
 		</div>
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-lg-9 offset-lg-3">
 					<div class="row">
@@ -287,10 +290,13 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-     <div class="copyright">Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved.  <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+		<div class="copyright"> 
+			Copyright &copy;<script>document.write(new Date().getFullYear());</script> 
+			<a  href="https://www.facebook.com/INGENIEROCABO/" target="_blank">CABO Multiservicios</a>
+		</div>
+   
 	</footer>
 	<!-- Footer section end -->
 
