Informacion de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -76,11 +76,11 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-3 contact-info mb-5 mb-lg-0">
-					<p>Direccion: Tu dir </p>
+					<p>Direccion: 30av sur, calle San Diego, Col Ciudad Real psje 3 - #4, San Miguel </p>
 					<p>Telefono: +503 7323 9029</p>
-					<p>Email: jacbjjj@gmail.com</p>
+					<p>Email: multiservicioscabo@gmail.com</p>
 					<div class="cf-social">
-						<a href="mailto:jacbjjj@gmail.com"  target="_blank" ><i class="fa fa-google"></i></a>
+						<a href="mailto:multiservicioscabo@gmail.com"  target="_blank" ><i class="fa fa-google"></i></a>
 						<a href="https://www.instagram.com/cabo_multiservicios_es/" target="_blank"><i class="fa fa-instagram"></i></a>
 						<a href="https://www.facebook.com/INGENIEROCABO/"  target="_blank"><i class="fa fa-facebook"></i></a>
 					</div>
