--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-sv">
 <head>
 	<title>Inicio - Cabo</title>
 	<meta charset="UTF-8">
@@ -45,6 +45,7 @@
 			<div>
 					<a href="https://www.instagram.com/cabo_multiservicios_es/"><i class="fa fa-instagram"></i></a>
 					<a href="https://www.facebook.com/INGENIEROCABO/"><i class="fa fa-facebook"></i></a>
+					<a href="https://wa.me/50360184063?text=Quiero%20solicitar%20informacion%20sobre%20sus%20servicios"><i class="fa fa-whatsapp"></i></a>
 			</div>
 		</div>
 		
@@ -125,23 +126,11 @@
 					<div class="service-box">
 						<div class="sb-icon">
 							<div class="sb-img-icon">
-								<img src="img/icon/dark/1.png" alt="">
-							</div>
-						</div>
-						<h3>Elaboracion de planos</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
-						<a href="#" class="readmore">Ver más</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-box">
-						<div class="sb-icon">
-							<div class="sb-img-icon">
 								<img src="img/icon/dark/2.png" alt="">
 							</div>
 						</div>
 						<h3>Cotizaciones</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<p>Presupuestos - Estimaciones - Calculos de vomunenes de obra</p>
 						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
@@ -149,11 +138,11 @@
 					<div class="service-box">
 						<div class="sb-icon">
 							<div class="sb-img-icon">
-								<img src="img/icon/dark/3.png" alt="">
+								<img src="img/icon/dark/1.png" alt="">
 							</div>
 						</div>
-						<h3>Mantenimientos y obras viales</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<h3>Diseño y Planificación</h3>
+						<p>Elaboración de planos - Diseños 3D - Programas de Trabajo - Presentaciones</p>
 						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
@@ -164,8 +153,20 @@
 								<img src="img/icon/dark/4.png" alt="">
 							</div>
 						</div>
-						<h3>Diseño en 3D</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<h3>Construcciones</h3>
+						<p>Urbanizaciones - Viviendas - Apartamentos - Casas de Campo - Oficinas</p>
+						<a href="#" class="readmore">Ver más</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="service-box">
+						<div class="sb-icon">
+							<div class="sb-img-icon">
+								<img src="img/icon/dark/4.png" alt="">
+							</div>
+						</div>
+						<h3>Amueblamientos</h3>
+						<p>Mubles de cocina - Mubles para dormitorio - Muebles de Loby </p>
 						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
@@ -176,8 +177,8 @@
 								<img src="img/icon/dark/5.png" alt="">
 							</div>
 						</div>
-						<h3>Estructuras Metalicas</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<h3>Servicios multiples</h3>
+						<p>Puertas - Portones - A/C - Instalaciones eléctricas residenciales - Fontanería - Techos - Servicios de Pintura - Drenajes - Pisos Ceramicos - Encielados - Baldosas - Puertas metálicas y madera...</p>
 						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
@@ -188,8 +189,8 @@
 								<img src="img/icon/dark/6.png" alt="">
 							</div>
 						</div>
-						<h3>Interiores</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+						<h3>Remodelaciones </h3>
+						<p>Fachadas de Casa - Fachadas de negocios - Mantenimientos - Interiores - Encielados - Pisos</p>
 						<a href="#" class="readmore">Ver más</a>
 					</div>
 				</div>
@@ -433,3 +434,6 @@
 
 </body>
 </html>
+
+
+
