--- a/servicios.html
+++ b/servicios.html
@@ -149,8 +149,8 @@
 							<img src="img/icon/dark/1.png" alt="">
 						</div>
 					</div>
-					<h3>Elaboracion de planos</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<h3>Cotizaciones</h3>
+					<p>Presupuestos - Estimaciones - Calculos de volumenes de obra </p>
 					<a href="#" class="readmore">Ver más</a>
 				</div>
 			</div>
@@ -161,8 +161,8 @@
 							<img src="img/icon/dark/2.png" alt="">
 						</div>
 					</div>
-					<h3>Cotizaciones</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<h3>Diseño y Planificación</h3>
+					<p>Elaboracion de planos - Diseño 3D - Programas de trabajo - Presentaciones</p>
 					<a href="#" class="readmore">Ver más</a>
 				</div>
 			</div>
@@ -173,8 +173,8 @@
 							<img src="img/icon/dark/3.png" alt="">
 						</div>
 					</div>
-					<h3>Mantenimientos y obras viales</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<h3>Construcciones </h3>
+					<p> Urbanizaciones - Viviendas - Apartamentos - Casas de campo - Oficinas</p>
 					<a href="#" class="readmore">Ver más</a>
 				</div>
 			</div>
@@ -185,8 +185,8 @@
 							<img src="img/icon/dark/4.png" alt="">
 						</div>
 					</div>
-					<h3>Diseño en 3D</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<h3>Remodelaciones </h3>
+					<p>Fachadas de casa - Fachadas de negocios - Mantenimientos - Interiores -  Encielados -  Pisos </p>
 					<a href="#" class="readmore">Ver más</a>
 				</div>
 			</div>
@@ -197,8 +197,8 @@
 							<img src="img/icon/dark/5.png" alt="">
 						</div>
 					</div>
-					<h3>Estructuras Metalicas</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<h3>Amueblamientos</h3>
+					<p>Mubles de cocina - Muebles para dormitorio - Muebles de lobby</p>
 					<a href="#" class="readmore">Ver más</a>
 				</div>
 			</div>
@@ -209,10 +209,30 @@
 							<img src="img/icon/dark/6.png" alt="">
 						</div>
 					</div>
-					<h3>Interiores</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dui eget lorem tincidunt.</p>
+					<h3>Alquileres</h3>
+					<p>Concreteras - Demoledores - Compactadoras - Vibradores - Andamios... </p>
 					<a href="#" class="readmore">Ver más</a>
 				</div>
+			</div>
+
+			<div class="col-lg-4 col-md-6">
+				
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="service-box">
+					<div class="sb-icon">
+						<div class="sb-img-icon">
+							<img src="img/icon/dark/6.png" alt="">
+						</div>
+					</div>
+					<h3>Servicios Múltiples</h3>
+					<p>Puertas - portones - a/c - instalaciones electricas residenciales - fontanerías
+						- techos - servicios de pinturas - drenajes pisos cerámicos - encielados - baldosas - puertas metálicas madera ... </p>
+					<a href="#" class="readmore">Ver más</a>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				
 			</div>
 		</div>
 	</div>
