--- a/contacto.html
+++ b/contacto.html
@@ -76,7 +76,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-3 contact-info mb-5 mb-lg-0">
-					<p>Direccion: 30av sur, calle San Diego, Col Ciudad Real psje 3 - #4, San Miguel </p>
+					<p>Direccion: Res Floresta, Pol B, #29, San Miguel </p>
 					<p>Telefono: +503 7323 9029</p>
 					<p>Email: multiservicioscabo@gmail.com</p>
 					<div class="cf-social">
@@ -132,7 +132,7 @@
 	<script src="js/main.js"></script>
 	
 	<!-- load for map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?keyb=AIzaSyDjNVXMSfDdcWjqVD2UyLqUXiqjfu-Zwck"></script>
 	<script src="js/map.js"></script>
 
 </body>
