--- a/inicio.html
+++ b/inicio.html
@@ -34,7 +34,7 @@
 	
 	<!-- Header section start -->   
 	<header class="header-area">
-		<a href="home.html" class="logo-area">
+		<a href="Inicio.html" class="logo-area">
 			<img src="img/logo.png" alt="">
 		</a>
 		<div class="nav-switch">
@@ -43,9 +43,9 @@
 		<div class="contactdiv">
 			<div class="phone-number"><a href="tel:+503 7323 9029" style="text-decoration: none; color:black" >+503 7323 9029</a></div>
 			<div>
-					<a href="https://www.instagram.com/cabo_multiservicios_es/"><i class="fa fa-instagram"></i></a>
-					<a href="https://www.facebook.com/INGENIEROCABO/"><i class="fa fa-facebook"></i></a>
-					<a href="https://wa.me/50373239029?text=Quiero%20solicitar%20informacion%20sobre%20sus%20servicios"><i class="fa fa-whatsapp"></i></a>
+				<a href="https://www.instagram.com/cabo_multiservicios_es/"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.facebook.com/INGENIEROCABO/"><i class="fa fa-facebook"></i></a>
+				<a href="https://wa.me/50373239029?text=Quiero%20solicitar%20informacion%20sobre%20sus%20servicios"><i class="fa fa-whatsapp"></i></a>
 			</div>
 		</div>
 		
@@ -60,30 +60,15 @@
 		</nav>
 	</header>
 	<!-- Header section end -->   
-
-
-	<!-- Hero section start -->
-	<section class="hero-section">
-		<!-- left social link ber -->
-		<!-- <div class="left-bar">
-			<div class="left-bar-content">
-				<div class="social-links">
-					<a href="#"><i class="fa fa-pinterest"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="https://www.instagram.com/cabo_multiservicios_es/"><i class="fa fa-instagram"></i></a>
-					<a href="https://www.facebook.com/INGENIEROCABO/"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</div>
-			</div>
-		</div> -->
-		<!-- hero slider area -->
-		
-		
-		<div class="hero-right-text">Multiservicios</div>
-	</section>
-	<!-- Hero section end -->
-
-
+	
+	
+		<!-- Hero section start -->
+		<section class="hero-section">
+			<div class="hero-right-text">Multiservicios</div>
+		</section>
+		<!-- Hero section end -->
+	
+	
 	<!-- Intro section start -->
 	<section class="intro-section pt100 pb50">
 		<div class="container">
