adding file versions

--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/animate.css"/>
 	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/style.css?v=1.1.0"/>
 
 
 	<!--[if lt IE 9]>
@@ -434,7 +434,7 @@
 	<script src="js/jquery.owl-filter.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/main.js?v=1.1.0"></script>
 	
 
 </body>
