--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="css/animate.css"/>
 		<link rel="stylesheet" href="css/owl.carousel.css"/>
 		<link rel="stylesheet" href="css/magnific-popup.css"/>
-		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" href="css/style.css?v=1.1.0"/>
 	
 	
 	
@@ -129,11 +129,11 @@
 	<script src="js/jquery.owl-filter.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/main.js?v=1.1.0"></script>
 	
 	<!-- load for map -->
 	<script src="https://maps.googleapis.com/maps/api/js?keyb=AIzaSyDjNVXMSfDdcWjqVD2UyLqUXiqjfu-Zwck"></script>
-	<script src="js/map.js"></script>
+	<script src="js/map.js?v=1.1.0"></script>
 
 </body>
 </html>
